--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                 <a href="cases.html" class="hover:text-blue-900 transition">Case Records</a>
                 <a href="reviews.html" class="hover:text-blue-900 transition">Case Reviews</a>
                  <a href="register.html" class="hover:text-blue-900 transition">File New Case</a>
+                 <a href="scam.html" class="hover:text-blue-900 transition">scam categories</a>
                 <a href="contact.html" class="btn-gov px-6 py-3 rounded shadow-sm">File Report</a>
             </div>
 
@@ -181,6 +182,7 @@
             <a href="cases.html" class="hover:text-gold transition">Intelligence</a>
             <a href="reviews.html" class="hover:text-gold transition">Case Reviews</a>
             <a href="register.html" class="hover:text-gold transition">File New Case</a>
+            <a href="scam.html" class="hover:text-gold transition">scam categories</a>
             <a href="contact.html" class="text-blue-700">Submit Evidence</a>
         </div>
     </div>
